parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> list_func block
Rule 2     list_func -> func list_func
Rule 3     list_func -> func
Rule 4     func -> FUN VARIABLE LPAREN params RPAREN EQUALS block expression SEMICOLON
Rule 5     params -> VARIABLE COMMA params
Rule 6     params -> VARIABLE
Rule 7     expression -> function_call
Rule 8     function_call -> VARIABLE LPAREN args RPAREN
Rule 9     args -> args COMMA expression
Rule 10    args -> expression
Rule 11    block -> L_CURLY statement_list R_CURLY
Rule 12    block -> L_CURLY R_CURLY
Rule 13    statement -> print_statement
Rule 14    statement -> if_statement
Rule 15    statement -> if_else_statement
Rule 16    statement -> while_statement
Rule 17    statement -> assign
Rule 18    statement -> assign_statement
Rule 19    statement -> index_assign_statement
Rule 20    print_statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 21    if_statement -> IF LPAREN expression RPAREN block
Rule 22    if_else_statement -> IF LPAREN expression RPAREN block ELSE block
Rule 23    while_statement -> WHILE LPAREN expression RPAREN block
Rule 24    statement_list -> statement_list statement
Rule 25    statement_list -> statement
Rule 26    expression -> MINUS expression
Rule 27    expression -> NOT BOOLEAN
Rule 28    expression -> expression PLUS expression
Rule 29    expression -> expression MINUS expression
Rule 30    expression -> expression TIMES expression
Rule 31    expression -> expression DIVIDE expression
Rule 32    expression -> expression LESSTHEN expression
Rule 33    expression -> expression LESSTHENEQUAL expression
Rule 34    expression -> expression EQUALEQUAL expression
Rule 35    expression -> expression NOTEQUAL expression
Rule 36    expression -> expression GREATERTHEN expression
Rule 37    expression -> expression GREATERTHENEQUAL expression
Rule 38    expression -> expression DIV expression
Rule 39    expression -> expression MOD expression
Rule 40    expression -> expression EXPONENT expression
Rule 41    expression -> expression ANDALSO expression
Rule 42    expression -> expression ORELSE expression
Rule 43    expression -> expression CONCAT expression
Rule 44    expression -> expression IN expression
Rule 45    expression -> NUMBER E expression
Rule 46    expression -> factor
Rule 47    expression -> list
Rule 48    expression -> index
Rule 49    expression -> LPAREN expression RPAREN
Rule 50    factor -> NUMBER
Rule 51    factor -> VARIABLE
Rule 52    factor -> STRING
Rule 53    assign -> VARIABLE EQUALS expression SEMICOLON
Rule 54    assign_statement -> VARIABLE EQUALS expression SEMICOLON
Rule 55    index_assign_statement -> VARIABLE LSQRBRACKET expression RSQRBRACKET EQUALS expression SEMICOLON
Rule 56    factor -> BOOLEAN
Rule 57    list -> LSQRBRACKET RSQRBRACKET
Rule 58    list -> LSQRBRACKET in_list RSQRBRACKET
Rule 59    list -> LSQRBRACKET in_list_appended RSQRBRACKET
Rule 60    in_list -> expression
Rule 61    in_list_appended -> expression COMMA expression
Rule 62    in_list_appended -> in_list_appended COMMA expression
Rule 63    index -> list_head LSQRBRACKET expression RSQRBRACKET
Rule 64    index -> list_head LSQRBRACKET expression RSQRBRACKET LSQRBRACKET expression RSQRBRACKET
Rule 65    list_head -> list
Rule 66    list_head -> STRING
Rule 67    list_head -> VARIABLE
Rule 68    expression -> LPAREN in_list_appended RPAREN
Rule 69    expression -> TUPLEINDEX NUMBER expression
Rule 70    expression -> LPAREN expression COMMA RPAREN

Terminals, with rules where they appear

ANDALSO              : 41
BOOLEAN              : 27 56
COMMA                : 5 9 61 62 70
CONCAT               : 43
DIV                  : 38
DIVIDE               : 31
E                    : 45
ELSE                 : 22
EQUALEQUAL           : 34
EQUALS               : 4 53 54 55
EXPONENT             : 40
FUN                  : 4
GREATERTHEN          : 36
GREATERTHENEQUAL     : 37
IF                   : 21 22
IN                   : 44
LESSTHEN             : 32
LESSTHENEQUAL        : 33
LPAREN               : 4 8 20 21 22 23 49 68 70
LSQRBRACKET          : 55 57 58 59 63 64 64
L_CURLY              : 11 12
MINUS                : 26 29
MOD                  : 39
NOT                  : 27
NOTEQUAL             : 35
NUMBER               : 45 50 69
ORELSE               : 42
PLUS                 : 28
PRINT                : 20
RPAREN               : 4 8 20 21 22 23 49 68 70
RSQRBRACKET          : 55 57 58 59 63 64 64
R_CURLY              : 11 12
SEMICOLON            : 4 20 53 54 55
STRING               : 52 66
TIMES                : 30
TUPLEINDEX           : 69
VARIABLE             : 4 5 6 8 51 53 54 55 67
WHILE                : 23
error                : 

Nonterminals, with rules where they appear

args                 : 8 9
assign               : 17
assign_statement     : 18
block                : 1 4 21 22 22 23
expression           : 4 9 10 20 21 22 23 26 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 49 53 54 55 55 60 61 61 62 63 64 64 69 70
factor               : 46
func                 : 2 3
function_call        : 7
if_else_statement    : 15
if_statement         : 14
in_list              : 58
in_list_appended     : 59 62 68
index                : 48
index_assign_statement : 19
list                 : 47 65
list_func            : 1 2
list_head            : 63 64
params               : 4 5
print_statement      : 13
program              : 0
statement            : 24 25
statement_list       : 11 24
while_statement      : 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . list_func block
    (2) list_func -> . func list_func
    (3) list_func -> . func
    (4) func -> . FUN VARIABLE LPAREN params RPAREN EQUALS block expression SEMICOLON

    FUN             shift and go to state 4

    program                        shift and go to state 1
    list_func                      shift and go to state 2
    func                           shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> list_func . block
    (11) block -> . L_CURLY statement_list R_CURLY
    (12) block -> . L_CURLY R_CURLY

    L_CURLY         shift and go to state 6

    block                          shift and go to state 5

state 3

    (2) list_func -> func . list_func
    (3) list_func -> func .
    (2) list_func -> . func list_func
    (3) list_func -> . func
    (4) func -> . FUN VARIABLE LPAREN params RPAREN EQUALS block expression SEMICOLON

    L_CURLY         reduce using rule 3 (list_func -> func .)
    FUN             shift and go to state 4

    func                           shift and go to state 3
    list_func                      shift and go to state 7

state 4

    (4) func -> FUN . VARIABLE LPAREN params RPAREN EQUALS block expression SEMICOLON

    VARIABLE        shift and go to state 8


state 5

    (1) program -> list_func block .

    $end            reduce using rule 1 (program -> list_func block .)


state 6

    (11) block -> L_CURLY . statement_list R_CURLY
    (12) block -> L_CURLY . R_CURLY
    (24) statement_list -> . statement_list statement
    (25) statement_list -> . statement
    (13) statement -> . print_statement
    (14) statement -> . if_statement
    (15) statement -> . if_else_statement
    (16) statement -> . while_statement
    (17) statement -> . assign
    (18) statement -> . assign_statement
    (19) statement -> . index_assign_statement
    (20) print_statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (21) if_statement -> . IF LPAREN expression RPAREN block
    (22) if_else_statement -> . IF LPAREN expression RPAREN block ELSE block
    (23) while_statement -> . WHILE LPAREN expression RPAREN block
    (53) assign -> . VARIABLE EQUALS expression SEMICOLON
    (54) assign_statement -> . VARIABLE EQUALS expression SEMICOLON
    (55) index_assign_statement -> . VARIABLE LSQRBRACKET expression RSQRBRACKET EQUALS expression SEMICOLON

    R_CURLY         shift and go to state 10
    PRINT           shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    VARIABLE        shift and go to state 22

    statement_list                 shift and go to state 9
    statement                      shift and go to state 11
    print_statement                shift and go to state 12
    if_statement                   shift and go to state 13
    if_else_statement              shift and go to state 14
    while_statement                shift and go to state 15
    assign                         shift and go to state 16
    assign_statement               shift and go to state 17
    index_assign_statement         shift and go to state 18

state 7

    (2) list_func -> func list_func .

    L_CURLY         reduce using rule 2 (list_func -> func list_func .)


state 8

    (4) func -> FUN VARIABLE . LPAREN params RPAREN EQUALS block expression SEMICOLON

    LPAREN          shift and go to state 23


state 9

    (11) block -> L_CURLY statement_list . R_CURLY
    (24) statement_list -> statement_list . statement
    (13) statement -> . print_statement
    (14) statement -> . if_statement
    (15) statement -> . if_else_statement
    (16) statement -> . while_statement
    (17) statement -> . assign
    (18) statement -> . assign_statement
    (19) statement -> . index_assign_statement
    (20) print_statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (21) if_statement -> . IF LPAREN expression RPAREN block
    (22) if_else_statement -> . IF LPAREN expression RPAREN block ELSE block
    (23) while_statement -> . WHILE LPAREN expression RPAREN block
    (53) assign -> . VARIABLE EQUALS expression SEMICOLON
    (54) assign_statement -> . VARIABLE EQUALS expression SEMICOLON
    (55) index_assign_statement -> . VARIABLE LSQRBRACKET expression RSQRBRACKET EQUALS expression SEMICOLON

    R_CURLY         shift and go to state 24
    PRINT           shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    VARIABLE        shift and go to state 22

    statement                      shift and go to state 25
    print_statement                shift and go to state 12
    if_statement                   shift and go to state 13
    if_else_statement              shift and go to state 14
    while_statement                shift and go to state 15
    assign                         shift and go to state 16
    assign_statement               shift and go to state 17
    index_assign_statement         shift and go to state 18

state 10

    (12) block -> L_CURLY R_CURLY .

    $end            reduce using rule 12 (block -> L_CURLY R_CURLY .)
    ELSE            reduce using rule 12 (block -> L_CURLY R_CURLY .)
    R_CURLY         reduce using rule 12 (block -> L_CURLY R_CURLY .)
    PRINT           reduce using rule 12 (block -> L_CURLY R_CURLY .)
    IF              reduce using rule 12 (block -> L_CURLY R_CURLY .)
    WHILE           reduce using rule 12 (block -> L_CURLY R_CURLY .)
    VARIABLE        reduce using rule 12 (block -> L_CURLY R_CURLY .)
    MINUS           reduce using rule 12 (block -> L_CURLY R_CURLY .)
    NOT             reduce using rule 12 (block -> L_CURLY R_CURLY .)
    NUMBER          reduce using rule 12 (block -> L_CURLY R_CURLY .)
    LPAREN          reduce using rule 12 (block -> L_CURLY R_CURLY .)
    TUPLEINDEX      reduce using rule 12 (block -> L_CURLY R_CURLY .)
    STRING          reduce using rule 12 (block -> L_CURLY R_CURLY .)
    BOOLEAN         reduce using rule 12 (block -> L_CURLY R_CURLY .)
    LSQRBRACKET     reduce using rule 12 (block -> L_CURLY R_CURLY .)


state 11

    (25) statement_list -> statement .

    R_CURLY         reduce using rule 25 (statement_list -> statement .)
    PRINT           reduce using rule 25 (statement_list -> statement .)
    IF              reduce using rule 25 (statement_list -> statement .)
    WHILE           reduce using rule 25 (statement_list -> statement .)
    VARIABLE        reduce using rule 25 (statement_list -> statement .)


state 12

    (13) statement -> print_statement .

    R_CURLY         reduce using rule 13 (statement -> print_statement .)
    PRINT           reduce using rule 13 (statement -> print_statement .)
    IF              reduce using rule 13 (statement -> print_statement .)
    WHILE           reduce using rule 13 (statement -> print_statement .)
    VARIABLE        reduce using rule 13 (statement -> print_statement .)


state 13

    (14) statement -> if_statement .

    R_CURLY         reduce using rule 14 (statement -> if_statement .)
    PRINT           reduce using rule 14 (statement -> if_statement .)
    IF              reduce using rule 14 (statement -> if_statement .)
    WHILE           reduce using rule 14 (statement -> if_statement .)
    VARIABLE        reduce using rule 14 (statement -> if_statement .)


state 14

    (15) statement -> if_else_statement .

    R_CURLY         reduce using rule 15 (statement -> if_else_statement .)
    PRINT           reduce using rule 15 (statement -> if_else_statement .)
    IF              reduce using rule 15 (statement -> if_else_statement .)
    WHILE           reduce using rule 15 (statement -> if_else_statement .)
    VARIABLE        reduce using rule 15 (statement -> if_else_statement .)


state 15

    (16) statement -> while_statement .

    R_CURLY         reduce using rule 16 (statement -> while_statement .)
    PRINT           reduce using rule 16 (statement -> while_statement .)
    IF              reduce using rule 16 (statement -> while_statement .)
    WHILE           reduce using rule 16 (statement -> while_statement .)
    VARIABLE        reduce using rule 16 (statement -> while_statement .)


state 16

    (17) statement -> assign .

    R_CURLY         reduce using rule 17 (statement -> assign .)
    PRINT           reduce using rule 17 (statement -> assign .)
    IF              reduce using rule 17 (statement -> assign .)
    WHILE           reduce using rule 17 (statement -> assign .)
    VARIABLE        reduce using rule 17 (statement -> assign .)


state 17

    (18) statement -> assign_statement .

    R_CURLY         reduce using rule 18 (statement -> assign_statement .)
    PRINT           reduce using rule 18 (statement -> assign_statement .)
    IF              reduce using rule 18 (statement -> assign_statement .)
    WHILE           reduce using rule 18 (statement -> assign_statement .)
    VARIABLE        reduce using rule 18 (statement -> assign_statement .)


state 18

    (19) statement -> index_assign_statement .

    R_CURLY         reduce using rule 19 (statement -> index_assign_statement .)
    PRINT           reduce using rule 19 (statement -> index_assign_statement .)
    IF              reduce using rule 19 (statement -> index_assign_statement .)
    WHILE           reduce using rule 19 (statement -> index_assign_statement .)
    VARIABLE        reduce using rule 19 (statement -> index_assign_statement .)


state 19

    (20) print_statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 26


state 20

    (21) if_statement -> IF . LPAREN expression RPAREN block
    (22) if_else_statement -> IF . LPAREN expression RPAREN block ELSE block

    LPAREN          shift and go to state 27


state 21

    (23) while_statement -> WHILE . LPAREN expression RPAREN block

    LPAREN          shift and go to state 28


state 22

    (53) assign -> VARIABLE . EQUALS expression SEMICOLON
    (54) assign_statement -> VARIABLE . EQUALS expression SEMICOLON
    (55) index_assign_statement -> VARIABLE . LSQRBRACKET expression RSQRBRACKET EQUALS expression SEMICOLON

    EQUALS          shift and go to state 29
    LSQRBRACKET     shift and go to state 30


state 23

    (4) func -> FUN VARIABLE LPAREN . params RPAREN EQUALS block expression SEMICOLON
    (5) params -> . VARIABLE COMMA params
    (6) params -> . VARIABLE

    VARIABLE        shift and go to state 31

    params                         shift and go to state 32

state 24

    (11) block -> L_CURLY statement_list R_CURLY .

    $end            reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)
    ELSE            reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)
    R_CURLY         reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)
    PRINT           reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)
    IF              reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)
    WHILE           reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)
    VARIABLE        reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)
    MINUS           reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)
    NOT             reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)
    NUMBER          reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)
    LPAREN          reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)
    TUPLEINDEX      reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)
    STRING          reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)
    BOOLEAN         reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)
    LSQRBRACKET     reduce using rule 11 (block -> L_CURLY statement_list R_CURLY .)


state 25

    (24) statement_list -> statement_list statement .

    R_CURLY         reduce using rule 24 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 24 (statement_list -> statement_list statement .)
    IF              reduce using rule 24 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 24 (statement_list -> statement_list statement .)
    VARIABLE        reduce using rule 24 (statement_list -> statement_list statement .)


state 26

    (20) print_statement -> PRINT LPAREN . expression RPAREN SEMICOLON
    (7) expression -> . function_call
    (26) expression -> . MINUS expression
    (27) expression -> . NOT BOOLEAN
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LESSTHEN expression
    (33) expression -> . expression LESSTHENEQUAL expression
    (34) expression -> . expression EQUALEQUAL expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression GREATERTHEN expression
    (37) expression -> . expression GREATERTHENEQUAL expression
    (38) expression -> . expression DIV expression
    (39) expression -> . expression MOD expression
    (40) expression -> . expression EXPONENT expression
    (41) expression -> . expression ANDALSO expression
    (42) expression -> . expression ORELSE expression
    (43) expression -> . expression CONCAT expression
    (44) expression -> . expression IN expression
    (45) expression -> . NUMBER E expression
    (46) expression -> . factor
    (47) expression -> . list
    (48) expression -> . index
    (49) expression -> . LPAREN expression RPAREN
    (68) expression -> . LPAREN in_list_appended RPAREN
    (69) expression -> . TUPLEINDEX NUMBER expression
    (70) expression -> . LPAREN expression COMMA RPAREN
    (8) function_call -> . VARIABLE LPAREN args RPAREN
    (50) factor -> . NUMBER
    (51) factor -> . VARIABLE
    (52) factor -> . STRING
    (56) factor -> . BOOLEAN
    (57) list -> . LSQRBRACKET RSQRBRACKET
    (58) list -> . LSQRBRACKET in_list RSQRBRACKET
    (59) list -> . LSQRBRACKET in_list_appended RSQRBRACKET
    (63) index -> . list_head LSQRBRACKET expression RSQRBRACKET
    (64) index -> . list_head LSQRBRACKET expression RSQRBRACKET LSQRBRACKET expression RSQRBRACKET
    (65) list_head -> . list
    (66) list_head -> . STRING
    (67) list_head -> . VARIABLE

    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    NUMBER          shift and go to state 39
    LPAREN          shift and go to state 33
    TUPLEINDEX      shift and go to state 43
    VARIABLE        shift and go to state 44
    STRING          shift and go to state 45
    BOOLEAN         shift and go to state 38
    LSQRBRACKET     shift and go to state 46

    expression                     shift and go to state 34
    function_call                  shift and go to state 35
    factor                         shift and go to state 40
    list                           shift and go to state 41
    index                          shift and go to state 42
    list_head                      shift and go to state 47

state 27

    (21) if_statement -> IF LPAREN . expression RPAREN block
    (22) if_else_statement -> IF LPAREN . expression RPAREN block ELSE block
    (7) expression -> . function_call
    (26) expression -> . MINUS expression
    (27) expression -> . NOT BOOLEAN
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LESSTHEN expression
    (33) expression -> . expression LESSTHENEQUAL expression
    (34) expression -> . expression EQUALEQUAL expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression GREATERTHEN expression
    (37) expression -> . expression GREATERTHENEQUAL expression
    (38) expression -> . expression DIV expression
    (39) expression -> . expression MOD expression
    (40) expression -> . expression EXPONENT expression
    (41) expression -> . expression ANDALSO expression
    (42) expression -> . expression ORELSE expression
    (43) expression -> . expression CONCAT expression
    (44) expression -> . expression IN expression
    (45) expression -> . NUMBER E expression
    (46) expression -> . factor
    (47) expression -> . list
    (48) expression -> . index
    (49) expression -> . LPAREN expression RPAREN
    (68) expression -> . LPAREN in_list_appended RPAREN
    (69) expression -> . TUPLEINDEX NUMBER expression
    (70) expression -> . LPAREN expression COMMA RPAREN
    (8) function_call -> . VARIABLE LPAREN args RPAREN
    (50) factor -> . NUMBER
    (51) factor -> . VARIABLE
    (52) factor -> . STRING
    (56) factor -> . BOOLEAN
    (57) list -> . LSQRBRACKET RSQRBRACKET
    (58) list -> . LSQRBRACKET in_list RSQRBRACKET
    (59) list -> . LSQRBRACKET in_list_appended RSQRBRACKET
    (63) index -> . list_head LSQRBRACKET expression RSQRBRACKET
    (64) index -> . list_head LSQRBRACKET expression RSQRBRACKET LSQRBRACKET expression RSQRBRACKET
    (65) list_head -> . list
    (66) list_head -> . STRING
    (67) list_head -> . VARIABLE

    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    NUMBER          shift and go to state 39
    LPAREN          shift and go to state 33
    TUPLEINDEX      shift and go to state 43
    VARIABLE        shift and go to state 44
    STRING          shift and go to state 45
    BOOLEAN         shift and go to state 38
    LSQRBRACKET     shift and go to state 46

    expression                     shift and go to state 48
    function_call                  shift and go to state 35
    factor                         shift and go to state 40
    list                           shift and go to state 41
    index                          shift and go to state 42
    list_head                      shift and go to state 47

state 28

    (23) while_statement -> WHILE LPAREN . expression RPAREN block
    (7) expression -> . function_call
    (26) expression -> . MINUS expression
    (27) expression -> . NOT BOOLEAN
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LESSTHEN expression
    (33) expression -> . expression LESSTHENEQUAL expression
    (34) expression -> . expression EQUALEQUAL expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression GREATERTHEN expression
    (37) expression -> . expression GREATERTHENEQUAL expression
    (38) expression -> . expression DIV expression
    (39) expression -> . expression MOD expression
    (40) expression -> . expression EXPONENT expression
    (41) expression -> . expression ANDALSO expression
    (42) expression -> . expression ORELSE expression
    (43) expression -> . expression CONCAT expression
    (44) expression -> . expression IN expression
    (45) expression -> . NUMBER E expression
    (46) expression -> . factor
    (47) expression -> . list
    (48) expression -> . index
    (49) expression -> . LPAREN expression RPAREN
    (68) expression -> . LPAREN in_list_appended RPAREN
    (69) expression -> . TUPLEINDEX NUMBER expression
    (70) expression -> . LPAREN expression COMMA RPAREN
    (8) function_call -> . VARIABLE LPAREN args RPAREN
    (50) factor -> . NUMBER
    (51) factor -> . VARIABLE
    (52) factor -> . STRING
    (56) factor -> . BOOLEAN
    (57) list -> . LSQRBRACKET RSQRBRACKET
    (58) list -> . LSQRBRACKET in_list RSQRBRACKET
    (59) list -> . LSQRBRACKET in_list_appended RSQRBRACKET
    (63) index -> . list_head LSQRBRACKET expression RSQRBRACKET
    (64) index -> . list_head LSQRBRACKET expression RSQRBRACKET LSQRBRACKET expression RSQRBRACKET
    (65) list_head -> . list
    (66) list_head -> . STRING
    (67) list_head -> . VARIABLE

    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    NUMBER          shift and go to state 39
    LPAREN          shift and go to state 33
    TUPLEINDEX      shift and go to state 43
    VARIABLE        shift and go to state 44
    STRING          shift and go to state 45
    BOOLEAN         shift and go to state 38
    LSQRBRACKET     shift and go to state 46

    expression                     shift and go to state 49
    function_call                  shift and go to state 35
    factor                         shift and go to state 40
    list                           shift and go to state 41
    index                          shift and go to state 42
    list_head                      shift and go to state 47

state 29

    (53) assign -> VARIABLE EQUALS . expression SEMICOLON
    (54) assign_statement -> VARIABLE EQUALS . expression SEMICOLON
    (7) expression -> . function_call
    (26) expression -> . MINUS expression
    (27) expression -> . NOT BOOLEAN
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LESSTHEN expression
    (33) expression -> . expression LESSTHENEQUAL expression
    (34) expression -> . expression EQUALEQUAL expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression GREATERTHEN expression
    (37) expression -> . expression GREATERTHENEQUAL expression
    (38) expression -> . expression DIV expression
    (39) expression -> . expression MOD expression
    (40) expression -> . expression EXPONENT expression
    (41) expression -> . expression ANDALSO expression
    (42) expression -> . expression ORELSE expression
    (43) expression -> . expression CONCAT expression
    (44) expression -> . expression IN expression
    (45) expression -> . NUMBER E expression
    (46) expression -> . factor
    (47) expression -> . list
    (48) expression -> . index
    (49) expression -> . LPAREN expression RPAREN
    (68) expression -> . LPAREN in_list_appended RPAREN
    (69) expression -> . TUPLEINDEX NUMBER expression
    (70) expression -> . LPAREN expression COMMA RPAREN
    (8) function_call -> . VARIABLE LPAREN args RPAREN
    (50) factor -> . NUMBER
    (51) factor -> . VARIABLE
    (52) factor -> . STRING
    (56) factor -> . BOOLEAN
    (57) list -> . LSQRBRACKET RSQRBRACKET
    (58) list -> . LSQRBRACKET in_list RSQRBRACKET
    (59) list -> . LSQRBRACKET in_list_appended RSQRBRACKET
    (63) index -> . list_head LSQRBRACKET expression RSQRBRACKET
    (64) index -> . list_head LSQRBRACKET expression RSQRBRACKET LSQRBRACKET expression RSQRBRACKET
    (65) list_head -> . list
    (66) list_head -> . STRING
    (67) list_head -> . VARIABLE

    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    NUMBER          shift and go to state 39
    LPAREN          shift and go to state 33
    TUPLEINDEX      shift and go to state 43
    VARIABLE        shift and go to state 44
    STRING          shift and go to state 45
    BOOLEAN         shift and go to state 38
    LSQRBRACKET     shift and go to state 46

    expression                     shift and go to state 50
    function_call                  shift and go to state 35
    factor                         shift and go to state 40
    list                           shift and go to state 41
    index                          shift and go to state 42
    list_head                      shift and go to state 47

state 30

    (55) index_assign_statement -> VARIABLE LSQRBRACKET . expression RSQRBRACKET EQUALS expression SEMICOLON
    (7) expression -> . function_call
    (26) expression -> . MINUS expression
    (27) expression -> . NOT BOOLEAN
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LESSTHEN expression
    (33) expression -> . expression LESSTHENEQUAL expression
    (34) expression -> . expression EQUALEQUAL expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression GREATERTHEN expression
    (37) expression -> . expression GREATERTHENEQUAL expression
    (38) expression -> . expression DIV expression
    (39) expression -> . expression MOD expression
    (40) expression -> . expression EXPONENT expression
    (41) expression -> . expression ANDALSO expression
    (42) expression -> . expression ORELSE expression
    (43) expression -> . expression CONCAT expression
    (44) expression -> . expression IN expression
    (45) expression -> . NUMBER E expression
    (46) expression -> . factor
    (47) expression -> . list
    (48) expression -> . index
    (49) expression -> . LPAREN expression RPAREN
    (68) expression -> . LPAREN in_list_appended RPAREN
    (69) expression -> . TUPLEINDEX NUMBER expression
    (70) expression -> . LPAREN expression COMMA RPAREN
    (8) function_call -> . VARIABLE LPAREN args RPAREN
    (50) factor -> . NUMBER
    (51) factor -> . VARIABLE
    (52) factor -> . STRING
    (56) factor -> . BOOLEAN
    (57) list -> . LSQRBRACKET RSQRBRACKET
    (58) list -> . LSQRBRACKET in_list RSQRBRACKET
    (59) list -> . LSQRBRACKET in_list_appended RSQRBRACKET
    (63) index -> . list_head LSQRBRACKET expression RSQRBRACKET
    (64) index -> . list_head LSQRBRACKET expression RSQRBRACKET LSQRBRACKET expression RSQRBRACKET
    (65) list_head -> . list
    (66) list_head -> . STRING
    (67) list_head -> . VARIABLE

    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    NUMBER          shift and go to state 39
    LPAREN          shift and go to state 33
    TUPLEINDEX      shift and go to state 43
    VARIABLE        shift and go to state 44
    STRING          shift and go to state 45
    BOOLEAN         shift and go to state 38
    LSQRBRACKET     shift and go to state 46

    expression                     shift and go to state 51
    function_call                  shift and go to state 35
    factor                         shift and go to state 40
    list                           shift and go to state 41
    index                          shift and go to state 42
    list_head                      shift and go to state 47

state 31

    (5) params -> VARIABLE . COMMA params
    (6) params -> VARIABLE .

    COMMA           shift and go to state 52
    RPAREN          reduce using rule 6 (params -> VARIABLE .)


state 32

    (4) func -> FUN VARIABLE LPAREN params . RPAREN EQUALS block expression SEMICOLON

    RPAREN          shift and go to state 53


state 33

    (49) expression -> LPAREN . expression RPAREN
    (68) expression -> LPAREN . in_list_appended RPAREN
    (70) expression -> LPAREN . expression COMMA RPAREN
    (7) expression -> . function_call
    (26) expression -> . MINUS expression
    (27) expression -> . NOT BOOLEAN
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LESSTHEN expression
    (33) expression -> . expression LESSTHENEQUAL expression
    (34) expression -> . expression EQUALEQUAL expression
    (35) expression -> . expression NOTEQUAL expression
    (36) expression -> . expression GREATERTHEN expression
    (37) expression -> . expression GREATERTHENEQUAL expression
    (38) expression -> . expression DIV expression
    (39) expression -> . expression MOD expression
    (40) expression -> . expression EXPONENT expression
    (41) expression -> . expression ANDALSO expression
    (42) expression -> . expression ORELSE expression
    (43) expression -> . expression CONCAT expression
    (44) expression -> . expression IN expression
    (45) expression -> . NUMBER E expression
    (46) expression -> . factor
    (47) expression -> . list
    (48) expression -> . index
    (49) expression -> . LPAREN expression RPAREN
    (68) expression -> . LPAREN in_list_appended RPAREN
    (69) expression -> . TUPLEINDEX NUMBER expression
    (70) expression -> . LPAREN expression COMMA RPAREN
    (61) in_list_appended -> . expression COMMA expression
    (62) in_list_appended -> . in_list_appended COMMA expression
    (8) function_call -> . VARIABLE LPAREN args RPAREN
    (50) factor -> . NUMBER
    (51) factor -> . VARIABLE
    (52) factor -> . STRING
    (56) factor -> . BOOLEAN
    (57) list -> . LSQRBRACKET RSQRBRACKET
    (58) list -> . LSQRBRACKET in_list RSQRBRACKET
    (59) list -> . LSQRBRACKET in_list_appended RSQRBRACKET
    (63) index -> . list_head LSQRBRACKET expression RSQRBRACKET
    (64) index -> . list_head LSQRBRACKET expression RSQRBRACKET LSQRBRACKET expression RSQRBRACKET
    (65) list_head -> . list
    (66) list_head -> . STRING
    (67) list_head -> . VARIABLE

    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    NUMBER          shift and go to state 39
    LPAREN          shift and go to state 33
    TUPLEINDEX      shift and go to state 43
    VARIABLE        shift and go to state 44
    STRING          shift and go to state 45
    BOOLEAN         shift and go to state 38
    LSQRBRACKET     shift and go to state 46

    expression                     shift and go to state 54
    in_list_appended               shift and go to state 55
    function_call                  shift and go to state 35
    factor                         shift and go to state 40
    list                           shift and go to state 41
    index                          shift and go to state 42
    list_head                      shift and go to state 47

state 34
